--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -141,6 +141,7 @@ body {
   @media only screen and (max-width: 700px) {
     .front-bg-mobile{
       background-size:100% 100%;
+      overflow: auto;
     }
     .mobile{
       display:block;
@@ -161,12 +162,64 @@ body {
       height: 100%;   
       width: 100%; 
       margin:0px;
-      padding:0px;    
+      padding:0px; 
+      overflow: hidden;   
      }
      .front-bg-desktop-box{
       background-size:100% 100%;
       height: 100%;   
+      /* background-origin: content-box; */
      }
   }
 
+  .wedding-of{
+    font-family: Montserrat;
+    font-size: 25px;
+    color:white;
+    /* font-weight: 500; */
+    line-height: 44px;
+    letter-spacing: 2.9037039279937744px;
+    text-align: center;
+  }
+
+  .name-of{
+     font-family: Tangerine,cursive;
+    font-size: 60px;
+    font-weight: 400;  
+    color:white; 
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #E0B45D;
+  }
+  .waktu-custom{
+    position: absolute;
+    left: 15.28%;
+    right: 15.4%;
+    top: 81.72%;
+    bottom: 15.96%;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center;
+    letter-spacing: 2.9037px;
+    text-transform: uppercase;
+
+    color: #23375B;
+  }
+  .custom-button{
+    position: absolute; 
+    box-sizing: border-box;
+    padding:5px;
+    background: #FFFFFF;
+    border: 1px solid #D61A23;
+    box-shadow: 0px 20px 35px rgba(156, 122, 77, 0.15);
+    border-radius: 3px;
+    color:#E75F57;
+    font-size:12.8px;
+  }
+  .foto-wedding{
+    width:100%;
+    height:auto
+  }
 
