--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -2,6 +2,9 @@
     height:170px;
     background-color: #FFFFFF;
 }
+html{
+  scroll-behavior: smooth;
+}
 body {
     padding: 0px;
     margin: 0px;
@@ -174,7 +177,7 @@ body {
 
   .wedding-of{
     font-family: Montserrat;
-    font-size: 25px;
+    font-size: 20px;
     color:white;
     /* font-weight: 500; */
     line-height: 44px;
@@ -184,7 +187,7 @@ body {
 
   .name-of{
      font-family: Tangerine,cursive;
-    font-size: 60px;
+    font-size: 45px;
     font-weight: 400;  
     color:white; 
     -webkit-text-stroke-width: 1px;
