--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -139,6 +139,7 @@ body {
     height: 100%; 
     position: absolute;
     left: 0px; width: 100%; 
+    overflow: hidden;
   }
 
   @media only screen and (max-width: 700px) {
